Fixed the gui and create navbar

--- a/flask-template/static/site.css
+++ b/flask-template/static/site.css
@@ -5,6 +5,37 @@ body {
     margin: 0;
     padding: 0;
 }
+nav {
+    background: #333;
+    display: flex;               
+    justify-content: center;     
+    align-items: center;         
+}
+
+.navbar {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex;               
+    justify-content: center;    
+}
+
+.navbar li {
+    margin: 0 10px;              
+}
+
+.navbar li a {
+    text-decoration: none;
+    color: #ffffff;
+    padding: 10px 15px;
+    display: inline-block;
+    transition: background-color 0.3s;
+    font-weight: bold;
+}
+
+.navbar li a:hover {
+    background-color: #333;
+}
 
 /* Chat Container */
 .chat-container {
@@ -81,7 +112,13 @@ body {
 }
 /* Styling for the "Upload Documents" heading */
 .upload-label{
-    font-size: 20px;
+    font-size: 15px;
+    color: #333;
+    margin-bottom: 10px;
+    margin-left: 10px;
+}
+.uploaded-files{
+    font-size: 15px;
     color: #333;
     margin-bottom: 10px;
     margin-left: 10px;
@@ -102,21 +139,39 @@ body {
     font-size: 16px;
     outline: none;
 }
-
-/* Send Button */
-button {
+.chat-form button{
+    padding: 12px 28px;
+    border: none;
+    border-radius: 8px;
     background: #25d366;
     color: #fff;
-    border: none;
-    padding: 12px 20px;
-    border-radius: 0%;
+    font-size: 16px;
     cursor: pointer;
     transition: 0.3s;
-    font-size: 18px;
+}
+/* Send Button */
+.upload-container button {
+    padding: 12px 28px;
+    border: none;
+    border-radius: 8px;
+    background: #25d366;
+    color: #fff;
+    font-size: 16px;
+    cursor: pointer;
+    transition: 0.3s;
 }
 
 button:hover {
     background: #128c7e;
+}
+
+.footer{
+    background: #333;
+    color: #fff;
+    text-align: center;
+    padding: 10px;
+    bottom: 0;
+    width: 100%;
 }
 
 /* Responsive Design */
